# IN3110

assignment1/: friendly_greeting.txt  gitconflict.txt  less_friendly_greeting.txt
assignment3/: README.md  pyproject.toml
assignment3/in3110_instapy/: cli.py  numba_filters.py  numpy_filters.py  python_filters.py  timing.py
assignment3/in3110_instapy.egg-info/: PKG-INFO  SOURCES.txt
assignment3/instapy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
assignment3/test/: test_numba.py  test_numpy.py  test_python.py
assignment4/: fetch_olympic_statistics.py  filter_urls.py  find_anniversaries.py  requesting_urls.py  wiki_race_challenge.py
assignment4/olympic_games_results/: best_of_sport_by_Gold.md
assignment4/tables_of_anniversaries/: anniversaries_april.md  anniversaries_august.md  anniversaries_december.md  anniversaries_february.md  anniversaries_january.md  anniversaries_july.md  anniversaries_june.md  anniversaries_march.md  anniversaries_may.md  anniversaries_november.md  anniversaries_october.md  anniversaries_september.md
